# Edit_Master_wiki

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  edit-master.toml  pyproject.toml
.github/workflows/: hourly-raw-collector.yml
docs/: raw_intake_harness.md  trends_recipes_communities.md
edit_master/: __init__.py  cli.py  config.py  raw_harness.py
graphify-out/: DISCONNECTED_NODES_ANALYSIS.md  GRAPH_REPORT.md  README.md  SCENE_RECOMMENDER_REPORT.md  SOURCE_RECOMMENDER_BRIDGE_REPORT.md  cypher.txt  cypher_scene_recommender.txt  graph.html  graph.json  scene_recommender_graph.json  source_recommender_bridge.json
graphify-out/user_query_eval_20260417_scene_first/: README.md  all_results.json  user_perspective_evaluation.md
graphify-out/wiki/: + Preference natural warmth SELECTS EditStyle clean ambient indoor.md  0 5x.md  0.5x 1x 2x 5x.md  0.5x 1x 2x.md  0.5x 1x front.md  0.5x 1x.md  0.5x.md  00_HOME.md  1. Authentic human moment.md  1. Edit strength.md  1. 선명한 베스트 순간 버스트모션 포토 우선.md  1. 트렌드 추천.md  10x.md  1x 0.5x.md  1x 2x 5bc41a.md  1x 2x 5x.md  1x 2x f4bb24.md  1x 2x portrait.md  1x 75d19a.md  1x a34472.md  1x or 0 5x.md  1x or macro.md  2. Reali-TEA  unfiltered story.md  2. Warmth  coolness.md  2. 일반 추천.md  2. 트렌디한 속도감 패닝Action Pan.md  2012~2014 기본 Instagram 필터  고채도  비네트.md  (+4059 more)
launchd/: com.okdoggy.edit-master-wiki.raw-hourly.plist
raw/: README.md
scripts/: __init__.py  agent_pipeline.py  collect_hourly_raw.py  evaluate_scene_matcher.py  run_graphify_raw.py
tests/: eval_queries.json  eval_queries_ambiguous.json  eval_queries_realistic.json
(+1796 files in other folders)
